# code-competitive

./: .gitignore  Dockerfile  Makefile  check_and_make.py  create_descriptions.sh
2025/A/: CMakeLists.txt  Makefile
2025/B/: CMakeLists.txt  Makefile  interactive_runner.py
2025/C/: CMakeLists.txt  Makefile
2025/D/: Makefile
2025/E/: CMakeLists.txt  Makefile
2025/F/: CMakeLists.txt  Makefile  solution_c
2025/F/answers/: EXPLANATION.md
2025/F/answers/c/: solution.c
2025/F/answers/java/: Solution.java
2025/F/answers/kt/: Solution.kt
2025/F/answers/py3/: solution.py
2025/F/compare/: kt
2025/F/description/: F.en.md  F.pt.md  problem.info
2025/F/input/: F_0016  F_0029  F_0030  F_0031  F_0032  F_0035  F_0036  F_0037  F_0038  F_0039  F_0040  F_0041  F_0042  F_0043  F_0044  F_0045  F_0046  F_0047  F_0048  F_0049  F_0050  F_0051  F_0052  F_0053  F_0054  F_0055  F_0056  F_0057  F_0058  F_0059  F_0060  F_0061  F_0062  F_0063  F_0064  F_0065  F_0066  F_0067  F_0068  F_0069  (+40 more)
2025/F/output/: F_0001  F_0002  F_0003  F_0004  F_0008  F_0009  F_0010  F_0011  F_0013  F_0016  F_0025  F_0026  F_0027  F_0028  F_0029  F_0030  F_0031  F_0032  F_0033  F_0035  F_0036  F_0037  F_0038  F_0039  F_0040  F_0041  F_0042  F_0043  F_0044  F_0045  F_0046  F_0047  F_0048  F_0049  F_0050  F_0051  F_0052  F_0053  F_0054  F_0055  (+54 more)
2025/F/run/: py3
2025/G/: CMakeLists.txt  Makefile
2025/H/: CMakeLists.txt  Makefile
2025/I/: CMakeLists.txt  Makefile  solution_c
2025/J/: CMakeLists.txt
2025/K/: CMakeLists.txt
2025/L/: CMakeLists.txt
atcoder/abc456/G/: CMakeLists.txt  Makefile
atcoder/abc456/G/answers/cpp/: solution.cpp
atcoder/abc456/G/answers/py3/: solution.py
atcoder/abc456/G/compile/: cpp
atcoder/abc456/G/description/: G.en.md  problem.info
docs/: tips.md
docs/algorithms/: backtracking.md  bellman-ford.md  binary-lifting.md  binary-search.md  branch-and-bound.md  depth-first-search.md  difference-array-prefix-sums.md  dijkstra.md  dynamic-programming.md  eulerian-path-circuit.md  fleury.md  floyd-warshall.md  greedy-algorithm.md  insert-sorted.md  linear-scan-string-matching.md  memoization.md  sieve-of-eratosthenes.md  simulation.md  sort.md  sweep-line.md  trial-division.md  welsh-powell.md
scratch/: verify_code.py
(+1052 files in other folders)
